<resources>
    <string name="app_name">CASAS</string>
    <string name="time_table">Time table</string>
    <string name="courses">Courses</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">This is home fragment</string>
    <string name="course_fragment">This is course fragment.</string>
    <string name="timetable_fragment">This is timetable fragment.</string>
    <string name="login">Login</string>
    <string name="loading_date_time"><![CDATA[Loading date & time...]]></string>
<!--    <string name="Time"></string>-->
    <string name="user_name">Hi,Hla Hla</string>
    <string name="date">date</string>
    <string name="course">High Performance Computing Technology</string>
    <string name="courseId">HPC-8115</string>
    <string name="AttendanceStartTime">10:00 am</string>
    <string name="AttendanceEndtime">12:00 pm</string>
    <string name="AttendanceDate">21-8-25</string>
    <string name="roomId">Room - 331</string>
    <string name="section">A\n</string>
    <string name="semester">7\n</string>
    <string name="courseNameLabel">High Performance technology</string>
    <string name="courseTrName">Dr Aye Myat Myat Paing</string>
    <string name="courseStartTime">09:00 AM</string>
    <string name="courseEndTime">10:00 AM</string>
</resources>