<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_teal"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_weight="1"
    tools:ignore="MissingConstraints"
    >
    <TextView
        android:id="@+id/courseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:id="@+id/courseId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/courseId"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"

        />
</LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:ignore="MissingConstraints">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/semester"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/section"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/roomId"/>

</LinearLayout>

    <ImageButton
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="Continue"
        android:scaleType="centerInside"
        android:src="@drawable/arrow_forward_24px"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@android:color/white"
        tools:layout_editor_absoluteY="36dp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>