<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardElevation="6dp"
        android:background="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:cardBackgroundColor="@color/dark_teal"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <!-- Course Name -->
            <TextView
                android:id="@+id/courseName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/courseNameLabel"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Course ID -->
            <TextView
                android:id="@+id/courseId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/courseId"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/courseName" />

            <!-- Room Number -->
            <TextView
                android:id="@+id/roomNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/roomId"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/courseName" />

            <!-- Teacher Name -->
            <TextView
                android:id="@+id/courseTeacher"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/courseTrName"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/courseId" />

            <!-- Start Time Label -->
            <TextView
                android:id="@+id/startTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Start:"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/courseTeacher" />

            <!-- Start Time -->
            <TextView
                android:id="@+id/classStartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/courseStartTime"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/startTimeLabel"
                app:layout_constraintTop_toTopOf="@id/startTimeLabel" />

            <!-- End Time Label -->

            <!-- End Time -->

            <TextView
                android:id="@+id/endTimeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="232dp"
                android:layout_marginTop="4dp"
                android:text="End:"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/classStartTime"
                app:layout_constraintTop_toBottomOf="@id/courseTeacher" />

            <TextView
                android:id="@+id/classEndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/courseEndTime"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/endTimeLabel"
                app:layout_constraintTop_toTopOf="@id/endTimeLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
